--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "description": "example: An Ionic project",
   "dependencies": {
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
+    "gulp-load-plugins": "^1.2.4",
+    "gulp-minify": "0.0.14",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-print": "^2.0.1",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-uglify": "^2.0.0",
+    "merge-stream": "^1.0.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
