--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,8 @@
     "ngCordova": "^0.1.27-alpha",
     "firebase": "2.4.2",
     "angularfire": "1.2.0",
-    "ion-alpha-scroll": "^0.1.3"
+    "ion-alpha-scroll": "^0.1.3",
+    "angular-identicon": "^0.1.18",
+    "identicon.js": "identicon#*"
   }
 }
